Fix text align

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -77,7 +77,6 @@ section {
 }
 
 .header-inner {
-    text-align: center;
     margin-top: 200px;
     color: white;
     
@@ -107,8 +106,6 @@ section {
 /* Services */
 
 .services {
-    text-align: center;
-    
     .row {
         margin-top: 80px;
     }
